<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="address_caption">Address</string>
    <string name="alt_check">Alt</string>
  
    <string name="arrow_down">Down Arrow</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="arrow_up">Up Arrow</string>
    <string name="auto">Auto</string>
    <string name="button_send_text">Send Text</string>
    <string name="button_send_without_saving">Send Text/Don\'t Save It</string>
<string name="center_mouse">Mouse @</string>
<string name="close">Close</string>
<string name="color_format_caption">Color Format</string>
<string name="color_mode">Color Mode</string>
<string name="connect_button">Connect</string>
<string name="connection_caption">Connection</string>
<string name="control_check">Ctrl</string>
<string name="copy_list_button">Copy List</string>
<string name="ctrl_alt_del">Ctrl-Alt-Del</string>
<string name="delete_connection">Delete Connection</string>
<string name="delete_key">Delete Selected Key</string>
<string name="delete_key_list">Delete Key List</string>
<string name="disconnect">Disconnect</string>
<string name="export_settings">Export</string>
<string name="export_settings_path">Export to file</string>
<string name="enter_text_title">Enter Text to Send</string>
<string name="enter_text">Send text</string>
<string name="fit_to_screen">Fit to Screen</string>
<string name="force_full_check">Force full-screen bitmap</string>
<string name="import_export_settings">Import/Export Settings</string>
<string name="import_settings">Import</string>
<string name="import_settings_file_url">Import from file or URL</string>
<string name="info">Info</string>
<string name="intro_text">If you need help, please check the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/Documentation"&gt;manual&lt;/a&gt; (press phone\'s Menu button to access manual and other menu items), or the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/faq"&gt;FAQ&lt;/a&gt;.&lt;br&gt;</string>
<string name="intro_title">Welcome</string>
<string name="intro_version_text">&lt;br&gt;--Sent text is remembered across sessions (optionally)&lt;br&gt;--Import/Export settings to file&lt;br&gt;--Button with zoom controls to bring up keyboard&lt;br&gt;--Can force tiling mode (very large screens)</string>
<string name="input_mode">Input Mode</string>
<string name="input_mode_fit_to_screen">No Pan; Trackball Mouse</string>
<string name="input_mode_mouse">Mouse Pointer Control Mode</string>
<string name="input_mode_panning">Desktop Panning Mode</string>
<string name="input_mode_touchpad_pan_trackball_mouse">Touch Pan; Trackball Mouse</string>
<string name="input_mode_dpad_pan_touchpad_mouse">Touch Mouse; D-Pad Pan</string>
<string name="input_mode_touch_pan_zoom_mouse">Touch Mouse Pan and Zoom</string>
<string name="input_mode_touchpad">Touchpad</string><string name="keep_password_button">Keep</string>
<string name="intro_dont_show">Don\'t show again</string>
<string name="keys_caption">Keys</string>
<string name="list_caption">List</string>
<string name="list_name_caption">List Name</string>
<string name="local_mouse_check">Local mouse pointer</string>
<string name="meta_key_title">Send Special Keys</string>
<string name="mouse_follow_pan">Mouse follow pan</string>
<string name="new_list_button">New List</string>
<string name="nickname_caption">Nickname</string>
<string name="off">Off</string>
<string name="on">On</string>
<string name="one_to_one">1:1</string>
<string name="open_doc">Manual/Wiki</string>
<string name="pan_follow_mouse">Pan Follows Mouse</string>
<string name="password_caption">Password</string>
<string name="port_caption">Port</string>
<string name="repeater_button">Repeater</string>
<string name="repeater_caption">Enter the repeater address &lt;b&gt;only if&lt;/b&gt; you are using an&lt;br&gt;&lt;i&gt;UltraVNC&lt;/i&gt;-type repeater</string>
<string name="repeater_clear">Don\'t use repeater</string>
<string name="repeater_dialog_title">Repeater Information</string>
<string name="repeater_empty_text">No repeater</string>
<string name="repeater_save">Use this repeater address</string>
<string name="save_as_copy">Save as Copy</string>
<string name="scaling">Scaling</string>
<string name="scaling_zoomable">Zoomable</string>
<!-- Send selected metakey -->
<string name="send_button">Send</string>
<string name="send_key_again">Send Key Again</string>
<string name="shift_check">Shift</string>
<string name="shortcut_label">VNC Connection</string>
<string name="showkbd_label">Keyboard</string>
<string name="special_keys">Send Keys</string>
<string name="username_caption">Username</string>
<string name="username_hint">For Windows Authentication</string>

<string name="app_name">Administrator</string>
    <string name="cappname">ADMINISTRATOR</string>
    <string name="actnameterms">Terms</string>
    <string name="termscheckbox">I Agreed with License</string>
    <string name="accept">Submit</string>
    <string name="about">About</string>
    <string name="reject">Exit</string>
    <string name="skip">Skip</string>
    <string name="actnamesecurity">Define Credentials</string>
    <string name="usernameh">Username(8)</string>
    <string name="passwordh">Password(6)</string>
    <string name="cpasswordh">Confirm Password</string>
    <string name="done">Done</string>
    <string name="actnamelogin">Authentication</string>
    <string name="network_manager">Network Manager</string>
    <string name="clients">Available Clients</string>
    <string name="connect">Connect to a Client</string>
    <string name="mithome">Advanced Options</string>
    <string name="adop1">Change Password Credential</string>
    <string name="adop2">Reset Application</string>
    <string name="rdfpass">Redefine Password</string>
    
     <string name="action_settings">Settings</string>
    <string name="skuuz_description">Mobile Gadget is a</string>
    <string name="load">Wait</string>
    <string name="next">Go to next</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="conditions">**We are</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="perror">Passwords must match</string>
    <string name="login">Login Please:-</string>
    <string name="lerror">Username error</string>
    <string name="title_activity_pc">PC</string>
    <string name="des">Desktop</string>
    <string name="tex">Text Editor</string>
    <string name="med">Media Player</string>
    <string name="pow">Power</string>
    <string name="title_activity_desktop">Desktop</string>
    <string name="title_activity_text">Text</string>
    <string name="title_activity_media">Media</string>
    <string name="title_activity_power">Power</string>
    <string name="newtext">New</string>
    <string name="shut">Shut Down</string>
    <string name="shut2">Restart</string>
    <string name="txt_ad">Admin</string>
    <string name="txt_not">Notifications</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_run">Run</string>
    <string name="service_notif_title">Administrator is Active</string>
    <string name="title_activity_test">Test</string>
    <string name="a2">Send Warnings</string>
    <string name="a3">Start a Process</string>
    <string name="r1">Kill</string>
    <string name="r2">Pause</string>
    <string name="title_activity_message">Message</string>
    <string name="m1">To</string>
    <string name="m2">Message</string>
    <string name="m3">Send</string>
    <string name="pcl">Mouse&amp;Keypad</string>
    <string name="admin">administrator</string>
    <string name="admin2">Administrator</string>
    <string name="notifications">Notifications</string>
    <string name="csec1">Redefine Username</string>
    <string name="csec3">Your Password</string>
    <string name="csec6">Your New Password(6)</string>
    <string name="csec4">Your Username</string>
    <string name="csec5">Your New Username(8)</string>
    <string name="title_activity_csecurity">CSecurity</string>
    <string name="title_activity_cpass">Cpass</string>
    <string name="ruser">Change Username</string>
    <string name="rpass">Change Password</string>
    <string name="dmode">Desktop Mode</string>
    <string name="pmode">Peripheral Mode</string>
    <string name="title_activity_home">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_acknowledgment">Acknowledgment</string>
    <string name="title_activity_connect">Connect</string>
    
</resources>
