<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Cpass" >

    <ImageButton
        android:id="@+id/ImageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/next"
        android:onClick="check"
        android:src="@drawable/next" />

    <TextView
        android:id="@+id/txtdone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/rdfpass"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/txtrpnpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageButton1"
        android:layout_alignLeft="@+id/txtrppass"
        android:layout_alignRight="@+id/ImageButton1"
        android:background="@drawable/txtfd_background"
        android:ems="10"
        android:hint="@string/csec6"
        android:lines="1"
        android:paddingLeft="9.0dip"
        android:paddingRight="9.0dip"
        android:textColor="@android:color/black"
        android:textSize="14.0sp" />

    <EditText
        android:id="@+id/txtrppass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtrpnpass"
        android:layout_alignLeft="@+id/txtrpuser"
        android:layout_alignRight="@+id/txtrpuser"
        android:layout_marginBottom="28dp"
        android:background="@drawable/txtfd_background"
        android:ems="10"
        android:hint="@string/csec3"
        android:lines="1"
        android:paddingLeft="9.0dip"
        android:paddingRight="9.0dip"
        android:textColor="@android:color/black"
        android:textSize="14.0sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtrpuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtrppass"
        android:layout_alignLeft="@+id/txtdone"
        android:layout_alignParentRight="true"
        android:background="@drawable/txtfd_background"
        android:ems="10"
        android:hint="@string/csec4"
        android:lines="1"
        android:paddingLeft="9.0dip"
        android:paddingRight="9.0dip"
        android:textColor="@android:color/black"
        android:textSize="14.0sp" />

</RelativeLayout>