<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="administrator.ui.initialization.Security" >

    <TextView
        android:id="@+id/txtactnamesecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtuser"
        android:layout_alignParentTop="true"
        android:text="@string/actnamesecurity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/red"
        android:textStyle="bold|italic" />

    <ImageButton
        android:id="@+id/imvwnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/next"
        android:onClick="check"
        android:src="@drawable/next" />

    <EditText
        android:id="@+id/txtuser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtpass"
        android:layout_below="@+id/txtactnamesecurity"
        android:layout_marginTop="28dp"
        android:background="@drawable/txtfd_background"
        android:ems="10"
        android:hint="@string/usernameh"
        android:inputType="text"
        android:lines="1"
        android:paddingLeft="9.0dip"
        android:paddingRight="9.0dip"
        android:textColor="@android:color/black"
        android:textSize="14.0sp" />

    <EditText
        android:id="@+id/txtpass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtcpass"
        android:layout_below="@+id/txtuser"
        android:background="@drawable/txtfd_background"
        android:ems="10"
        android:hint="@string/passwordh"
        android:inputType="textNoSuggestions|textPassword"
        android:lines="1"
        android:paddingLeft="9.0dip"
        android:paddingRight="9.0dip"
        android:textColor="@android:color/black"
        android:textSize="14.0sp" />

    <EditText
        android:id="@+id/txtcpass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imvwnext"
        android:layout_below="@+id/txtpass"
        android:background="@drawable/txtfd_background"
        android:ems="10"
        android:hint="@string/cpasswordh"
        android:inputType="textNoSuggestions|textPassword"
        android:lines="1"
        android:paddingLeft="9.0dip"
        android:paddingRight="9.0dip"
        android:textColor="@android:color/black"
        android:textSize="14.0sp" />

</RelativeLayout>